--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contumance — Library</title>
+  <title>Contumance Press — Library</title>
   <meta name="description" content="Contumance — A quiet library of interactive music ebooks." />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>☰</text></svg>">
   <style>
@@ -99,7 +99,7 @@
   <main>
     <header class="header">
       <div>
-        <h1>Contumance</h1>
+        <h1>Contumance Press</h1>
         <p class="desc">A quiet selection for curious hands.</p>
       </div>
       <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme" title="Toggle theme">☾</button>
