--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -49,11 +49,15 @@
 </head>
 <body>
   <main>
-    <div class="topbar">
-      <h1>The Chords Book</h1>
-      <button id="themeToggle" class="theme-toggle" type="button" title="Toggle theme">☾</button>
-    </div>
-    <div class="subtitle">Todas las posiciones “tocables” dentro de trastes 0–12 (incluye cuerdas al aire). 4–8 cuerdas.</div>
+          <div class="topbar">
+            <h1>The Chords Book</h1>
+            <nav class="breadcrumb" aria-label="Miga de pan">
+                <a href="index.html">← Volver al índice</a>
+            </nav>
+            <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme"
+                title="Toggle theme">☾</button>
+        </div>
+    <div class="subtitle">subtitulo ... </div>
 
     <details class="panel" open>
       <summary>Setup</summary>
