--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -6,160 +6,162 @@
   <title>The Chords Book — playable positions (open + 0–12)</title>
   <meta name="description" content="All playable chord shapes within frets 0–12, including open strings. Supports 4–8 strings." />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>♪</text></svg>">
-  <style>
-    /* Base palette (light mode) aligned with Scales */
-    :root{
-      --paper:#f5f1e8;      /* paper bg */
-      --ink:#2f2a1e;        /* main text */
-      --muted:#6b6253;      /* secondary text */
-      --link:#2d5842;       /* links */
-      --link-visited:#514f7a;
-      --accent:#a08a63;     /* borders */
-      --rule:#d8d2c2;       /* inner lines */
-      --accent-soft:#999;   /* soft markers */
-      --maxw:42rem;         /* reading width */
-      --radius:14px;
-      --lh:1.6;
-      --fs-base:18px;
+<style>
+  /* Base palette (light mode) aligned with Scales */
+  :root{
+    --paper:#f5f1e8;      /* paper bg */
+    --ink:#2f2a1e;        /* main text */
+    --muted:#6b6253;      /* secondary text */
+    --link:#2d5842;       /* links */
+    --link-visited:#514f7a;
+    --accent:#a08a63;     /* borders */
+    --rule:#d8d2c2;       /* inner lines */
+    --accent-soft:#999;   /* soft markers */
+    --maxw:42rem;         /* reading width */
+    --radius:14px;
+    --lh:1.6;
+    --fs-base:18px;
+  }
+  html.theme-dark{
+    --paper:#10110f;
+    --ink:#dbd6c9;
+    --muted:#a39c8c;
+    --link:#a9d0b8;
+    --link-visited:#c0b8e0;
+    --accent:#2a2b27;
+    --rule:#2a2b27;
+    --accent-soft:#7f7a6b;
+  }
+
+  html{ font-size:var(--fs-base); }
+  body{
+    margin:0; padding:0;
+    color:var(--ink); background:var(--paper);
+    line-height:var(--lh);
+    font-family: ui-serif, Georgia, "Iowan Old Style", "Palatino Linotype", Palatino, serif;
+    text-rendering: optimizeLegibility;
+    -webkit-font-smoothing: antialiased;
+  }
+
+  /* subtle paper texture */
+  body::before{
+    content:""; position:fixed; inset:0; pointer-events:none; opacity:.06;
+    background-image:
+      radial-gradient(circle at 25% 15%, #000 0.5px, transparent 0.5px),
+      radial-gradient(circle at 75% 85%, #000 0.5px, transparent 0.5px);
+    background-size:3px 3px, 3px 3px;
+    mix-blend-mode:multiply;
+  }
+
+  main{ max-width:var(--maxw); margin:0 auto; padding:7vh 1.25rem 4rem; }
+
+  /* topbar + breadcrumb matches Scales */
+  .topbar{ display:flex; align-items:center; justify-content:space-between; gap:1rem; margin-bottom:1rem; }
+  nav.breadcrumb{ font-size:.95rem; }
+  nav.breadcrumb a{
+    color:var(--link); text-decoration:none; text-underline-offset:2px;
+  }
+
+  h1{ margin:.2rem 0 .3rem 0; font-weight:600; font-size:clamp(1.6rem,4vw,2.2rem); }
+  .subtitle{ color:var(--muted); font-size:.95rem; margin-bottom:.8rem; }
+
+  .theme-toggle{
+    border:1px solid var(--accent); background:transparent; color:var(--ink);
+    border-radius:.45rem; padding:.35rem .55rem; cursor:pointer; font-size:1.15rem; line-height:1;
+  }
+  .theme-toggle:focus-visible{
+    outline:2px dashed var(--accent); outline-offset:2px;
+  }
+
+  hr{ border:none; border-top:1px solid var(--accent); margin:1.25rem 0; opacity:.5; }
+
+  /* panel styling */
+  details.panel{
+    border:1px solid var(--accent);
+    border-radius:.6rem;
+    background: rgba(255,255,255,0.6);
+  }
+  html.theme-dark details.panel{ background: rgba(0,0,0,0.1); }
+  details.panel>summary{
+    cursor:pointer; list-style:none; padding:.6rem .8rem; font-size:.95rem; font-weight:600; color:var(--ink);
+  }
+  details.panel>summary::-webkit-details-marker{ display:none; }
+  details.panel .panel-body{ padding:.6rem .8rem .9rem; }
+
+  /* show a chevron */
+  details.panel>summary::after{
+    content:"▾"; float:right; transition:transform .2s ease;
+  }
+  details.panel[open]>summary::after{ transform:rotate(180deg); }
+
+  /* compact controls (same rhythm as Scales) */
+  .controls{
+    display:grid; gap:8px; align-items:center;
+    grid-template-columns: repeat(auto-fit, minmax(160px,1fr));
+    margin-bottom:8px;
+  }
+  .row{ display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
+  label{ font-size:12px; opacity:.9; }
+  select, button, input[type="number"]{
+    appearance:none; border:1px solid var(--accent); background:transparent; color:var(--ink);
+    padding:10px 12px; border-radius:.5rem; font-family:inherit; font-size:14px; line-height:1; min-width:0;
+    outline:none;
+  }
+  select:focus-visible, button:focus-visible, input[type="number"]:focus-visible{
+    outline:2px dashed var(--accent); outline-offset:2px;
+  }
+
+  /* tuning cards */
+  .tuning{ display:grid; gap:8px; grid-template-columns: repeat(auto-fit, minmax(180px,1fr)); }
+  .string-card{ border:1px solid var(--accent); border-radius:.6rem; padding:8px; background:transparent; }
+
+  /* bank + grid of result cards */
+  .bank{ margin:12px 0 6px; display:flex; justify-content:space-between; align-items:center; }
+  .counter{ color:var(--muted); font-size:.9rem; }
+  .grid{ display:grid; gap:12px; grid-template-columns: repeat(auto-fit, minmax(260px,1fr)); }
+  .card{ border:1px solid var(--accent); border-radius:.6rem; padding:.8rem .8rem .9rem; background:transparent; }
+  .title{ font-weight:700; letter-spacing:.01em; margin-bottom:.25rem; }
+  .meta{ color:var(--muted); font-size:.85rem; display:flex; gap:.6rem; flex-wrap:wrap; }
+
+  /* mini fretboard SVG, coherent with palette */
+  .fb svg{ max-width:100%; height:auto; display:block; }
+  .fb-grid line{ stroke:var(--rule); stroke-width:1; }
+  .fb-grid .nut{ stroke:var(--ink); stroke-width:3; } /* thicker nut at fret 1 when startF=0 */
+  .fb-note circle{ fill:var(--ink); }
+  .fb-note text{ font-size:10px; font-weight:700; fill:var(--paper); }
+
+  /* --- Dark mode contrast fixes for SVG labels --- */
+  /* 1) String names & fret numbers */
+  .fb-grid text { 
+    fill: var(--muted);
+  }
+  html.theme-dark .fb-grid text {
+    fill: var(--ink);
+    opacity: .85;
+  }
+  /* 2) Fret/grid lines a bit brighter in dark */
+  html.theme-dark .fb-grid line { 
+    stroke: #3b3a34;
+  }
+  /* 3) Ensure note labels inside dots stay readable */
+  html.theme-dark .fb-note text {
+    fill: var(--paper);
+    font-weight: 800;
+  }
+
+  /* Hover underline animation (like index/Scales) */
+  @media (prefers-reduced-motion:no-preference){
+    a{
+      position:relative;
+      background-image:linear-gradient(currentColor,currentColor);
+      background-position:0 100%;
+      background-repeat:no-repeat;
+      background-size:0% 1px;
+      transition:background-size .25s ease, color .2s ease;
     }
-    html.theme-dark{
-      --paper:#10110f;
-      --ink:#dbd6c9;
-      --muted:#a39c8c;
-      --link:#a9d0b8;
-      --link-visited:#c0b8e0;
-      --accent:#2a2b27;
-      --rule:#2a2b27;
-      --accent-soft:#7f7a6b;
-    }
-
-    html{ font-size:var(--fs-base); }
-    body{
-      margin:0; padding:0;
-      color:var(--ink); background:var(--paper);
-      line-height:var(--lh);
-      font-family: ui-serif, Georgia, "Iowan Old Style", "Palatino Linotype", Palatino, serif;
-      text-rendering: optimizeLegibility;
-      -webkit-font-smoothing: antialiased;
-    }
-
-    /* subtle paper texture */
-    body::before{
-      content:""; position:fixed; inset:0; pointer-events:none; opacity:.06;
-      background-image:
-        radial-gradient(circle at 25% 15%, #000 0.5px, transparent 0.5px),
-        radial-gradient(circle at 75% 85%, #000 0.5px, transparent 0.5px);
-      background-size:3px 3px, 3px 3px;
-      mix-blend-mode:multiply;
-    }
-
-    main{ max-width:var(--maxw); margin:0 auto; padding:7vh 1.25rem 4rem; }
-
-    /* topbar + breadcrumb matches Scales */
-    .topbar{ display:flex; align-items:center; justify-content:space-between; gap:1rem; margin-bottom:1rem; }
-    nav.breadcrumb{ font-size:.95rem; }
-    nav.breadcrumb a{
-      color:var(--link); text-decoration:none; text-underline-offset:2px;
-    }
-
-    h1{ margin:.2rem 0 .3rem 0; font-weight:600; font-size:clamp(1.6rem,4vw,2.2rem); }
-    .subtitle{ color:var(--muted); font-size:.95rem; margin-bottom:.8rem; }
-
-    .theme-toggle{
-      border:1px solid var(--accent); background:transparent; color:var(--ink);
-      border-radius:.45rem; padding:.35rem .55rem; cursor:pointer; font-size:1.15rem; line-height:1;
-    }
-    .theme-toggle:focus-visible{
-      outline:2px dashed var(--accent); outline-offset:2px;
-    }
-
-    hr{ border:none; border-top:1px solid var(--accent); margin:1.25rem 0; opacity:.5; }
-
-    /* panel styling */
-    details.panel{
-      border:1px solid var(--accent);
-      border-radius:.6rem;
-      background: rgba(255,255,255,0.6);
-    }
-    html.theme-dark details.panel{ background: rgba(0,0,0,0.1); }
-    details.panel>summary{
-      cursor:pointer; list-style:none; padding:.6rem .8rem; font-size:.95rem; font-weight:600; color:var(--ink);
-    }
-    details.panel>summary::-webkit-details-marker{ display:none; }
-    details.panel .panel-body{ padding:.6rem .8rem .9rem; }
-
-    /* show a chevron */
-    details.panel>summary::after{
-      content:"▾"; float:right; transition:transform .2s ease;
-    }
-    details.panel[open]>summary::after{ transform:rotate(180deg); }
-
-    /* compact controls (same rhythm as Scales) */
-    .controls{
-      display:grid; gap:8px; align-items:center;
-      grid-template-columns: repeat(auto-fit, minmax(160px,1fr));
-      margin-bottom:8px;
-    }
-    .row{ display:flex; gap:8px; align-items:center; flex-wrap:wrap; }
-    label{ font-size:12px; opacity:.9; }
-    select, button, input[type="number"]{
-      appearance:none; border:1px solid var(--accent); background:transparent; color:var(--ink);
-      padding:10px 12px; border-radius:.5rem; font-family:inherit; font-size:14px; line-height:1; min-width:0;
-      outline:none;
-    }
-    select:focus-visible, button:focus-visible, input[type="number"]:focus-visible{
-      outline:2px dashed var(--accent); outline-offset:2px;
-    }
-
-    /* tuning cards */
-    .tuning{ display:grid; gap:8px; grid-template-columns: repeat(auto-fit, minmax(180px,1fr)); }
-    .string-card{ border:1px solid var(--accent); border-radius:.6rem; padding:8px; background:transparent; }
-
-    /* bank + grid of result cards */
-    .bank{ margin:12px 0 6px; display:flex; justify-content:space-between; align-items:center; }
-    .counter{ color:var(--muted); font-size:.9rem; }
-    .grid{ display:grid; gap:12px; grid-template-columns: repeat(auto-fit, minmax(260px,1fr)); }
-    .card{ border:1px solid var(--accent); border-radius:.6rem; padding:.8rem .8rem .9rem; background:transparent; }
-    .title{ font-weight:700; letter-spacing:.01em; margin-bottom:.25rem; }
-    .meta{ color:var(--muted); font-size:.85rem; display:flex; gap:.6rem; flex-wrap:wrap; }
-
-    /* mini fretboard SVG, coherent with palette */
-    .fb svg{ max-width:100%; height:auto; display:block; }
-    .fb-grid line{ stroke:var(--rule); stroke-width:1; }
-    .fb-grid .nut{ stroke:var(--ink); stroke-width:3; } /* thicker nut at fret 1 when startF=0 */
-    .fb-note circle{ fill:var(--ink); }
-    .fb-note text{ font-size:10px; font-weight:700; fill:var(--paper); }
-
-    /* Hover underline animation (like index/Scales) */
-    @media (prefers-reduced-motion:no-preference){
-      a{
-        position:relative;
-        background-image:linear-gradient(currentColor,currentColor);
-        background-position:0 100%;
-        background-repeat:no-repeat;
-        background-size:0% 1px;
-        transition:background-size .25s ease, color .2s ease;
-      }
-      a:hover, a:focus-visible{ background-size:100% 1px; outline:/* 1) Texto del SVG (cuerdas y números de traste) */
-.fb-grid text { 
-  fill: var(--muted);            /* buen contraste en claro */
-}
-html.theme-dark .fb-grid text {
-  fill: var(--ink);              /* claro en oscuro */
-  opacity: .85;                  /* leve suavizado */
-}
-
-/* 2) Líneas del diapasón en oscuro (un poco más visibles) */
-html.theme-dark .fb-grid line { 
-  stroke: #3b3a34;               /* más claro que --rule en dark */
-}
-
-/* 3) (Opcional) Refuerza legibilidad dentro de los círculos */
-html.theme-dark .fb-note text {
-  fill: var(--paper);            /* ya usás esto, aquí lo aseguramos */
-  font-weight: 800;              /* un toque más grueso */
-}
-  </style>
+    a:hover, a:focus-visible{ background-size:100% 1px; outline:none; }
+  }
+</style>
 </head>
 <body>
   <main>
