--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -217,6 +217,11 @@
     </div>
 
     <section id="cards" class="grid" aria-live="polite"></section>
+    <footer>
+      <a class="btn" href="YOUR_CAFECITO_URL" target="_blank" rel="noopener">Invite me a coffee ☕</a>
+      <span class="note">Fuel the craft. Inspire the next page.</span>
+      <span>© <span id="y"></span> Contumance</span>
+    </footer>
   </main>
 
   <!-- Theme toggle (same logic as Scales page) -->
