--- a/the-daily-chord.html
+++ b/the-daily-chord.html
@@ -202,9 +202,10 @@
       <!-- <div class="legend">Strings (6→1) on the left · Fret numbers above. R = root · 3/b3 · 5 · 7/b7.</div> -->
     </section>
 
-    <footer class="page">
-      <a class="btn" href="YOUR_CAFECITO_URL" target="_blank" rel="noopener">Buy me a coffee</a>
-      <span>© Contumance</span>
+    <footer>
+      <a class="btn" href="YOUR_CAFECITO_URL" target="_blank" rel="noopener">Invite me a coffee ☕</a>
+      <span class="note">Fuel the craft. Inspire the next page.</span>
+      <span>© <span id="y"></span> Contumance</span>
     </footer>
   </main>
 
