--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -157,7 +157,9 @@
     <p class="footer">Tip: use ± to shift each string by semitones. Everything is saved on this device (no backend).</p>
 
     <footer>
-      <a class="btn" href="YOUR_CAFECITO_URL" target="_blank" rel="noopener">Buy me a coffee</a>
+      <a class="btn" href="YOUR_CAFECITO_URL" target="_blank" rel="noopener">Invite me a coffee ☕</a>
+      <span class="note">Fuel the craft. Inspire the next page.</span>
+      <span>© <span id="y"></span> Contumance</span>
     </footer>
   </main>
 
