footer en scales book

--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -93,6 +93,13 @@
         background-repeat:no-repeat; background-size:0% 1px; transition:background-size .25s ease, color .2s ease;}
       a:hover, a:focus-visible{background-size:100% 1px; outline:none;}
     }
+    
+    footer{
+      margin-top:2.5rem; font-size:.95rem; color:var(--muted);
+      display:flex; gap:.75rem; align-items:center; flex-wrap:wrap
+    }
+    .btn{border:1px solid var(--accent); padding:.5rem .8rem; border-radius:.35rem; text-decoration:none}
+    .note{width:100%; color:var(--muted); font-style:italic; margin-top:.35rem}
   </style>
 </head>
 <body>
