--- a/the-daily-chord.html
+++ b/the-daily-chord.html
@@ -136,12 +136,12 @@
     .fb-note circle{ fill:var(--ink); }
     .fb-note text{ font-size:10px; font-weight:700; fill:var(--paper); }
 
-    footer.page{
-      margin:30px 0 60px; font-size:12px; color:var(--muted); display:flex; gap:10px; align-items:center; flex-wrap:wrap;
+    footer{
+      margin-top:2.5rem; font-size:.95rem; color:var(--muted);
+      display:flex; gap:.75rem; align-items:center; flex-wrap:wrap
     }
-    footer.page a.btn{
-      border:1px solid var(--accent); border-radius:.5rem; padding:.35rem .6rem; text-decoration:none; color:var(--ink);
-    }
+    .btn{border:1px solid var(--accent); padding:.5rem .8rem; border-radius:.35rem; text-decoration:none}
+    .note{width:100%; color:var(--muted); font-style:italic; margin-top:.35rem}
 
     /* Hover underline animation (like index/Scales) */
     @media (prefers-reduced-motion:no-preference){
