--- a/the-daily-chord.html
+++ b/the-daily-chord.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>The Daily Chord — Contumance</title>
-  <meta name="description" content="One chord per day as creative inspiration. Minimal e-ink-style UI, dark mode, and an inline fretboard preview." />
+  <meta name="description" content="One chord each day as creative inspiration. Minimal e-ink-style UI, dark mode, and an inline fretboard preview." />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>♪</text></svg>">
 
   <style>
@@ -168,7 +168,7 @@
 
     <header>
       <h1>The Daily Chord</h1>
-      <div class="subtitle">One chord per day.</div>
+      <div class="subtitle">One chord each day as creative inspiration.</div>
     </header>
 
     <details class="panel" open>
