--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -155,7 +155,7 @@
     <!-- ===== Piano (one octave C–C) ===== -->
     <section class="piano-wrap" aria-label="Piano octave">
       <div class="piano-head">
-        <div><strong>Piano</strong> — one octave (C–C)</div>
+        <div><strong>Piano</strong> - one octave</div>
         <div class="piano-caption" id="pianoCaption">C Major (Ionian)</div>
       </div>
       <div id="pianoContainer" style="width:100%; overflow:hidden;"></div>
