--- a/the-chords-book.html
+++ b/the-chords-book.html
@@ -377,7 +377,7 @@
 
     <header>
       <h1>The Chords Book</h1>
-      <div class="subtitle">Playable chord shapes within frets 0–12 (includes open strings). Supports 4–8 strings.</div>
+      <div class="subtitle">Explore unusual visions of harmony — each one a doorway to creation.</div>
     </header>
 
     <details class="panel" open>
