--- a/the-daily-chord.html
+++ b/the-daily-chord.html
@@ -165,34 +165,37 @@
     })();
   </script>
 
-  <!-- Oracle logic + fretboard (American notation, deterministic PRNG) -->
+  <!-- Oracle logic + fretboard (American notation, deterministic per local day) -->
   <script>
-    /* ========= Utilities ========= */
-
-    // Day-of-year (1..366)
-    function dayOfYear(d){ const s = new Date(d.getFullYear(),0,1); s.setHours(0,0,0,0); const di = Math.floor((d - s)/86400000)+1; return di; }
-
-    // ISO week number (1..53)
+    /* ========= Fecha normalizada (determinismo diario) ========= */
+    function normalizeLocal(d){
+      return new Date(d.getFullYear(), d.getMonth(), d.getDate());
+    }
+    function dayOfYear(d){
+      const d0 = normalizeLocal(d);
+      const s = new Date(d0.getFullYear(),0,1);
+      return Math.floor((d0 - s)/86400000) + 1;
+    }
     function isoWeek(d){
-      const dt = new Date(Date.UTC(d.getFullYear(), d.getMonth(), d.getDate()));
+      const d0 = normalizeLocal(d);
+      const dt = new Date(Date.UTC(d0.getFullYear(), d0.getMonth(), d0.getDate()));
       const dayNum = dt.getUTCDay() || 7;
       dt.setUTCDate(dt.getUTCDate() + 4 - dayNum);
       const yearStart = new Date(Date.UTC(dt.getUTCFullYear(),0,1));
       return Math.ceil((((dt - yearStart) / 86400000) + 1) / 7);
     }
-
-    // Approx moon phase (0..1) using simple synodic cycle
-    function moonPhase(d){
-      // base reference new moon: 2000-01-06 18:14 UTC (JDN 2451550.1)
+    // Fase lunar fijada a 12:00 UTC de la fecha → estable por día
+    function moonPhaseDateOnly(d){
+      const d0 = normalizeLocal(d);
       const msPerDay = 86400000;
-      const synodic = 29.530588853; // days
-      const jdn = (d.getTime()/msPerDay) + 2440587.5;
+      const ms = Date.UTC(d0.getFullYear(), d0.getMonth(), d0.getDate(), 12, 0, 0); // 12:00 UTC
+      const jdn = ms/msPerDay + 2440587.5;
+      const synodic = 29.530588853;
       const age = (jdn - 2451550.1) / synodic;
-      const frac = age - Math.floor(age);
-      return frac; // 0=new, 0.5=full
+      return age - Math.floor(age);
     }
 
-    // Fast 32-bit string hash (xorshift-like mix)
+    /* ========= PRNG ========= */
     function hash32(str){
       let h = 2166136261 >>> 0;
       for(let i=0;i<str.length;i++){
@@ -200,14 +203,11 @@
         h = Math.imul(h, 16777619);
         h ^= h >>> 13; h = (h ^ (h << 7)) >>> 0;
       }
-      // Final avalanche
       h ^= h >>> 16; h = Math.imul(h, 2246822507);
       h ^= h >>> 13; h = Math.imul(h, 3266489909);
       h ^= h >>> 16;
       return h >>> 0;
     }
-
-    // Mulberry32 PRNG (deterministic for a seed)
     function mulberry32(a) {
       return function() {
         a |= 0; a = a + 0x6D2B79F5 | 0;
@@ -216,24 +216,20 @@
         return ((t ^ t >>> 14) >>> 0) / 4294967296;
       }
     }
-
     function pickWeighted(rng, pairs){
-      // pairs: [{v, w}]
       const sum = pairs.reduce((s,p)=>s+p.w,0);
       let t = rng()*sum;
       for(const p of pairs){ if((t-=p.w) <= 0) return p.v; }
       return pairs[pairs.length-1].v;
     }
 
-    /* ========= Musical data ========= */
-
+    /* ========= Datos musicales ========= */
     const NOTE_PC = { "C":0,"C#":1,"D":2,"D#":3,"E":4,"F":5,"F#":6,"G":7,"G#":8,"A":9,"A#":10,"B":11 };
-    const PC_TO_NAME = ["C","C#","D","D#","E","F","F#","G","G#","A","A#","B"]; // sharps only for consistency
-    const STD_TUNING = [40,45,50,55,59,64]; // E2 A2 D3 G3 B3 E4 (low→high)
+    const PC_TO_NAME = ["C","C#","D","D#","E","F","F#","G","G#","A","A#","B"];
+    const STD_TUNING = [40,45,50,55,59,64]; // E2 A2 D3 G3 B3 E4
     const STRING_NAMES = ['6(E)','5(A)','4(D)','3(G)','2(B)','1(e)'];
     const DEG_LABELS = {0:'R',1:'♭2',2:'2',3:'♭3',4:'3',5:'4',6:'♭5',7:'5',8:'♯5',9:'6',10:'♭7',11:'7'};
 
-    // Extended qualities -> chord tone intervals (mod 12)
     const QUALITIES = {
       'major':    { intervals:[0,4,7],        symbol:'' },
       'minor':    { intervals:[0,3,7],        symbol:'m' },
@@ -245,45 +241,36 @@
       'aug':      { intervals:[0,4,8],        symbol:'aug' },
       'sus2':     { intervals:[0,2,7],        symbol:'sus2' },
       'sus4':     { intervals:[0,5,7],        symbol:'sus4' },
-      'add9':     { intervals:[0,4,7,14],     symbol:'add9' },   // 14 ≡ 2
+      'add9':     { intervals:[0,4,7,14],     symbol:'add9' },
       'six':      { intervals:[0,4,7,9],      symbol:'6' },
-      'sixNine':  { intervals:[0,4,7,9,14],   symbol:'6/9' }      // 14 ≡ 2
+      'sixNine':  { intervals:[0,4,7,9,14],   symbol:'6/9' }
     };
 
-    // Season-weighted palette (still pseudo-randomized per date)
     function qualityForDate(rng, month){
       const isWinter = (month===12 || month<=2);
       const isSpring = (month>=3 && month<=5);
       const isSummer = (month>=6 && month<=8);
       const isAutumn = (month>=9 && month<=11);
-
       const base = [
         {v:'major', w: 1.2}, {v:'minor', w: 1.2}, {v:'dom7', w:1.0}, {v:'maj7', w:0.8}, {v:'m7', w:0.9},
         {v:'m7b5', w:0.4}, {v:'diminished', w:0.4}, {v:'aug', w:0.35},
         {v:'sus2', w:0.5}, {v:'sus4', w:0.5}, {v:'add9', w:0.6}, {v:'six', w:0.6}, {v:'sixNine', w:0.55}
       ];
-
-      // Gentle seasonal biases
       if(isWinter){ base.find(p=>p.v==='maj7').w += .25; base.find(p=>p.v==='m7b5').w += .15; }
       if(isSpring){ base.find(p=>p.v==='add9').w += .25; base.find(p=>p.v==='sixNine').w += .2; }
       if(isSummer){ base.find(p=>p.v==='dom7').w += .25; base.find(p=>p.v==='aug').w += .2; }
       if(isAutumn){ base.find(p=>p.v==='minor').w += .25; base.find(p=>p.v==='sus4').w += .2; }
-
       return pickWeighted(rng, base);
     }
 
     /* ========= Voicing / Fretboard ========= */
-
-    // Closed-ish position: 1 note por cuerda en ventana dada
     function pickVoicing(pcRoot, intervals, windowStart, inversionBias){
       const win = 5, out = [];
-      // Reordenamos un poco los intervalos para empujar una "inversión" deseada
       const ints = intervals.slice();
       if (inversionBias && ints.length > 1){
         const rot = Math.floor(inversionBias * ints.length) % ints.length;
         for(let i=0;i<rot;i++){ ints.push(ints.shift()); }
       }
-
       for(let s=0; s<STD_TUNING.length; s++){
         const midiOpen = STD_TUNING[s];
         let chosen = null, deg = null;
@@ -304,17 +291,14 @@
     function renderFretboard(rootName, qualityKey, seedMix){
       const pcRoot = NOTE_PC[rootName] || 0;
       const intervals = QUALITIES[qualityKey].intervals;
-      // ventana semialeatoria estable (2..14)
-      const start = 2 + Math.floor(seedMix * 13);
-      const inversionBias = (seedMix * 1.618) % 1; // empujoncito áureo
+      const start = 2 + Math.floor(seedMix * 13);    // 2..14
+      const inversionBias = (seedMix * 1.618) % 1;   // sesgo estable
       const voicing = pickVoicing(pcRoot, intervals, start, inversionBias);
 
       const frets = 5, startFret = start, strings = 6, w = frets*44 + 100, h = strings*26 + 70;
       const x0 = 70, y0 = 40, dx = 44, dy = 26;
       const g = [];
       g.push(`<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 ${w} ${h}">`);
-
-      // grid
       g.push(`<g class="fb-grid">`);
       for(let s=0; s<strings; s++){
         const y = y0 + s*dy;
@@ -332,8 +316,6 @@
         g.push(`<text x="${x}" y="${(y0 - dy/1.3)}" font-size="10" text-anchor="middle">${label}</text>`);
       }
       g.push(`</g>`);
-
-      // notes
       g.push(`<g class="fb-note">`);
       voicing.forEach((v, idx) => {
         if(!v) return;
@@ -344,12 +326,10 @@
         g.push(`<text x="${cx}" y="${(cy+3)}" text-anchor="middle">${label}</text>`);
       });
       g.push(`</g></svg>`);
-
       document.getElementById('fretboard').innerHTML = g.join('');
     }
 
-    /* ========= Oracle ========= */
-
+    /* ========= Oráculo (determinista por día local) ========= */
     const $ = s => document.querySelector(s);
     const dateLabel = $('#dateLabel'), chordText = $('#chordText'), metaTags = $('#metaTags'), moodLine = $('#moodLine'), inputDate = $('#pickDate');
 
@@ -363,40 +343,33 @@
       });
     }
     function formatDateLong(d){
-      return d.toLocaleDateString('en-US', { weekday:'long', year:'numeric', month:'long', day:'numeric' });
+      return normalizeLocal(d).toLocaleDateString('en-US', { weekday:'long', year:'numeric', month:'long', day:'numeric' });
     }
-
     function seedForDate(d){
-      // Mezcla estable de varias "fuentes" temporales + luna
-      const n = dayOfYear(d);
-      const wk = isoWeek(d);
-      const moon = moonPhase(d);
-      const tz = -d.getTimezoneOffset(); // minutos (para anclar al huso del usuario)
-      const key = `${d.getFullYear()}-${d.getMonth()+1}-${d.getDate()}|doy=${n}|wk=${wk}|moon=${moon.toFixed(5)}|tz=${tz}`;
+      const d0 = normalizeLocal(d);
+      const n = dayOfYear(d0);
+      const wk = isoWeek(d0);
+      const moon = moonPhaseDateOnly(d0);
+      const tz = -d0.getTimezoneOffset();
+      const key = `${d0.getFullYear()}-${d0.getMonth()+1}-${d0.getDate()}|doy=${n}|wk=${wk}|moon=${moon.toFixed(5)}|tz=${tz}`;
       return hash32(key);
     }
 
     function computeForDate(d){
-      // RNG determinístico por fecha
-      const seed = seedForDate(d);
+      const d0 = normalizeLocal(d);
+      const seed = seedForDate(d0);
       const rng = mulberry32(seed);
 
-      // Tónica: arranca en una permutación pseudoaleatoria de 12 PCs
-      // Le metemos un corrimiento dependiente de la luna para más "vida"
       const basePc = Math.floor(rng()*12);
-      const moonShift = Math.floor(moonPhase(d)*12) % 12;
+      const moonShift = Math.floor(moonPhaseDateOnly(d0)*12) % 12;
       const pcRoot = (basePc + moonShift) % 12;
       const root = PC_TO_NAME[pcRoot];
 
-      // Calidad con pesos suaves por estación
-      const qualKey = qualityForDate(rng, d.getMonth()+1);
+      const qualKey = qualityForDate(rng, d0.getMonth()+1);
       const qual = QUALITIES[qualKey];
-
-      // Símbolo
       const symbol = root + qual.symbol;
 
-      // Mood generativo (energía de 0..1)
-      const energy = (rng()*0.5 + moonPhase(d)*0.5);
+      const energy = (rng()*0.5 + moonPhaseDateOnly(d0)*0.5);
       const mood = (function(){
         if(qualKey==='diminished' || qualKey==='m7b5') return 'Veins of tension, a door half-open.';
         if(qualKey==='aug') return 'Edges sharpened, horizons bending.';
@@ -411,51 +384,43 @@
         return energy>0.5 ? 'Friction as compass.' : 'Silence is voltage.';
       })();
 
-      // Metadatos
-      const doy = dayOfYear(d);
-      const invIndex = Math.floor(rng()*4); // 0..3 pseudo "inversión"
-      const windowSeed = rng();              // para ventana/inversión en diapasón
+      const doy = dayOfYear(d0);
+      const invIndex = Math.floor(rng()*4);
+      const windowSeed = rng();
 
-      // Pintar UI
-      dateLabel.textContent = formatDateLong(d);
+      dateLabel.textContent = formatDateLong(d0);
       chordText.textContent = symbol;
-
       const famLabel = qualKey.replace('sixNine','6/9').replace('six','6');
-      const tagSeason = ['Winter','Spring','Summer','Autumn'][Math.floor((d.getMonth()+1-1)/3)] || '';
-      tagsRender([
-        `Day ${doy}`,
-        `Quality: ${famLabel}`,
-        `Inv: ${['R','1st','2nd','3rd'][invIndex] || 'R'}`,
-        tagSeason
-      ]);
-
+      const tagSeason = ['Winter','Spring','Summer','Autumn'][Math.floor((d0.getMonth())/3)] || '';
+      tagsRender([`Day ${doy}`, `Quality: ${famLabel}`, `Inv: ${['R','1st','2nd','3rd'][invIndex] || 'R'}`, tagSeason]);
       moodLine.textContent = mood;
 
-      // Fretboard
       renderFretboard(root, qualKey, windowSeed);
 
-      // Hook
       window.dispatchEvent(new CustomEvent('oracle-chord', { detail:{
-        date: d.toISOString().slice(0,10),
+        date: d0.toISOString().slice(0,10),
         dayOfYear: doy, root, quality: qualKey, symbol
       }}));
     }
 
-    /* ========= Controls ========= */
-
-    document.getElementById('btnToday').addEventListener('click', () => computeForDate(new Date()));
+    /* ========= Controles (siempre normalizados) ========= */
+    document.getElementById('btnToday').addEventListener('click', () => {
+      computeForDate(new Date());
+    });
     document.getElementById('btnRandom').addEventListener('click', () => {
       const y = (new Date()).getFullYear();
       const start = new Date(y,0,1);
       const rnd = Math.floor(Math.random()*365);
       const d = new Date(start.getTime() + rnd*86400000);
-      inputDate.value = d.toISOString().slice(0,10);
-      computeForDate(d);
+      const dn = normalizeLocal(d);
+      inputDate.value = dn.toISOString().slice(0,10);
+      computeForDate(dn);
     });
     document.getElementById('btnGo').addEventListener('click', () => {
       const v = inputDate.value;
       if(!v){ alert('Pick a date.'); return; }
-      const d = new Date(v + 'T12:00:00');
+      const parts = v.split('-').map(Number);
+      const d = new Date(parts[0], parts[1]-1, parts[2]); // fecha local sin hora
       computeForDate(d);
     });
     document.getElementById('btnShare').addEventListener('click', () => {
@@ -470,11 +435,11 @@
       }
     });
 
-    // Init
+    // Init (normalizado)
     (function init(){
       try{
-        const t = new Date();
-        inputDate.value = t.toISOString().slice(0,10);
+        const t = normalizeLocal(new Date());
+        document.getElementById('pickDate').value = t.toISOString().slice(0,10);
         computeForDate(t);
       }catch(err){
         document.getElementById('chordText').textContent = '⚠️ Initialization error';
