--- a/the-scales-book.html
+++ b/the-scales-book.html
@@ -114,7 +114,7 @@
 
     <header>
       <h1>The Scales Book</h1>
-      <div class="subtitle">Minimal interactive fretboard for learning scales (3–10 strings, up to 24 frets).</div>
+      <div class="subtitle">Paths that lead the hand to the new colors.</div>
     </header>
 
     <details class="panel" id="panel" open>
