--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Contumance Press — Library</title>
-  <meta name="description" content="Contumance — A quiet library of interactive music ebooks." />
+  <title>Re:sonance — A quiet selection for curious hands.</title>
+  <meta name="description" content="Re:sonance — An experimental library of sound, color, and quiet motion. Paths of vibration that awaken new forms of listening." />
   <link rel="icon" href="data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><text y='0.9em' font-size='90'>☰</text></svg>">
   <style>
     :root{
@@ -12,8 +12,8 @@
       --link-visited:#514f7a; --accent:#a08a63; --maxw:42rem; --lh:1.6; --fs-base:18px;
     }
     html.theme-dark{
-      --paper:#10110f; --ink:#dbd6c9; --muted:#a39c8c; --link:#a9d0b8;
-      --link-visited:#c0b8e0; --accent:#2a2b27;
+      --paper:#0e0f0e; --ink:#dbd6c9; --muted:#9b9689; --link:#a9d0b8;
+      --link-visited:#c0b8e0; --accent:#242523;
     }
     html{font-size:var(--fs-base)}
     body{
@@ -21,6 +21,7 @@
       font-family:ui-serif, Georgia, "Iowan Old Style","Palatino Linotype", Palatino, serif;
       line-height:var(--lh); text-rendering:optimizeLegibility; -webkit-font-smoothing:antialiased;
     }
+
     /* textura sutil tipo papel */
     body::before{
       content:""; position:fixed; inset:0; pointer-events:none; opacity:.06;
@@ -29,14 +30,13 @@
         radial-gradient(circle at 75% 85%, #000 .5px, transparent .5px);
       background-size:3px 3px, 3px 3px; mix-blend-mode:multiply;
     }
+
     main{max-width:var(--maxw); margin:0 auto; padding:9vh 1.25rem 4rem}
 
-    /* Header */
     header.header{display:flex; align-items:flex-start; justify-content:space-between; gap:1rem}
     header h1{font-weight:600; margin:0 0 .25rem 0; font-size:clamp(1.8rem,4vw,2.4rem); letter-spacing:.2px}
     header p.desc{margin:0 0 2rem 0; color:var(--muted); font-style:italic}
 
-    /* Botón de tema */
     .theme-toggle{
       border:1px solid var(--accent); background:transparent; color:var(--ink);
       border-radius:.45rem; padding:.35rem .55rem; cursor:pointer; font-size:1.15rem; line-height:1
@@ -45,7 +45,6 @@
 
     hr{border:none; border-top:1px solid var(--accent); margin:1.5rem 0; opacity:.5}
 
-    /* Lista / índice */
     nav h2{
       font-size:1rem; font-weight:600; text-transform:uppercase; color:var(--muted);
       margin:0 0 .5rem 0; letter-spacing:.08em
@@ -57,7 +56,6 @@
     a{color:var(--link); text-decoration:none; text-underline-offset:2px}
     a:visited{color:var(--link-visited)}
 
-    /* ====== BLOQUE CLICABLE CON ICONO + TITULO + DESCRIPCION ====== */
     .item{
       display:grid;
       grid-template-columns: 1.6rem 1fr;
@@ -67,8 +65,8 @@
       column-gap:.75rem;
       row-gap:.2rem;
       align-items:center;
-      padding:.85rem 0;           /* área táctil cómoda */
-      width:100%;                 /* el enlace ocupa toda la fila */
+      padding:.85rem 0;
+      width:100%;
     }
     .item:focus-visible{outline:2px dashed var(--accent); outline-offset:2px}
     .item:hover .title,
@@ -99,16 +97,19 @@
   <main>
     <header class="header">
       <div>
-        <h1>Contumance Press</h1>
+        <h1>Re:sonance</h1>
         <p class="desc">A quiet selection for curious hands.</p>
       </div>
       <button class="theme-toggle" id="themeToggle" type="button" aria-label="Toggle theme" title="Toggle theme">☾</button>
     </header>
+
     <hr>
+
     <nav aria-label="Library">
-      <h2>Library</h2>
+      <h2>Collection</h2>
       <ul class="index">
-        <!-- SCALES: puntos ascendentes (camino/escala) -->
+
+        <!-- SCALES -->
         <li>
           <a class="item" href="the-scales-book.html">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="currentColor">
@@ -118,10 +119,11 @@
               <circle cx="18.5" cy="8" r="1.6"></circle>
             </svg>
             <span class="title">The Scales Book</span>
-            <span class="meta">Paths that lead the hand to new colors.</span>
+            <span class="meta">Paths that guide the hand toward unseen colors.</span>
           </a>
         </li>
-        <!-- CHORDS: triad (tres nodos conectados) -->
+
+        <!-- CHORDS -->
         <li>
           <a class="item" href="the-chords-book.html">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
@@ -131,31 +133,30 @@
               <path d="M7.9 16.2 L10.4 8.8 M16.1 16.2 L13.6 8.8" />
             </svg>
             <span class="title">The Chords Book</span>
-            <span class="meta">Shapes of harmony across the neck.</span>
+            <span class="meta">Forms of resonance across the strings.</span>
           </a>
         </li>
 
-        <!-- DAILY CHORD (APP): calendario minimal + chispa -->
+        <!-- DAILY CHORD / APP -->
         <li>
           <a class="item" href="the-daily-chord.html">
             <svg class="icon" viewBox="0 0 24 24" aria-hidden="true" fill="none" stroke="currentColor" stroke-width="1.5" stroke-linecap="round" stroke-linejoin="round">
-              <!-- calendario -->
               <rect x="3.5" y="6" width="17" height="13" rx="1.8"></rect>
               <path d="M7 4 v3 M17 4 v3 M3.5 9 h17" />
-              <!-- chispa minimal -->
               <path d="M12 13.1 v-1.7 M12 13.1 l1.15 1.15 M12 13.1 l-1.15 1.15 M12 13.1 v1.7" />
             </svg>
             <span class="title">The Daily Chord</span>
-            <span class="meta">A quiet, interactive spark—one chord each day.</span>
+            <span class="meta">Each day, a chord — seen anew, to awaken inspiration.</span>
           </a>
         </li>
+
       </ul>
     </nav>
 
     <footer>
-      <a class="btn" href="YOUR_CAFECITO_URL" target="_blank" rel="noopener">Invite me a coffee ☕</a>
-      <span class="note">Fuel the craft. Inspire the next page.</span>
-      <span>© <span id="y"></span> Contumance</span>
+      <a class="btn" href="YOUR_CAFECITO_URL" target="_blank" rel="noopener">Invite a coffee ☕</a>
+      <span class="note">Echoes fuel the next vibration.</span>
+      <span>© <span id="y"></span> Re:sonance</span>
     </footer>
   </main>
 
