--- a/index.html
+++ b/index.html
@@ -155,6 +155,9 @@
 
     <footer>
       <a class="btn" href="YOUR_CAFECITO_URL" target="_blank" rel="noopener">Invite a coffee ☕</a>
+      
+      <script type="text/javascript" src="https://cdnjs.buymeacoffee.com/1.0.0/button.prod.min.js" data-name="bmc-button" data-slug="Contumance" data-color="#FFDD00" data-emoji=""  data-font="Bree" data-text="Buy me a coffee" data-outline-color="#000000" data-font-color="#000000" data-coffee-color="#ffffff" ></script>
+      
       <span class="note">Echoes fuel the next vibration.</span>
       <span>© <span id="y"></span> Re:sonance</span>
     </footer>
